test/libyul/yulSyntaxTests/bin_string_literal_3.yul
{
    let name := bin"11111111000"
}
// ====
// dialect: evm
// ----
// ParserError 1465: (18-30): Illegal token: Expected numbers of bits multiple of 8.
